--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
-    "redux-promise-middleware-actions": "^3.0.1"
+    "redux-promise-middleware-actions": "^3.0.1",
+    "react-slick": "^0.27.12",
+    "react-slideshow-image": "^3.2.0",
+    "slick-carousel": "^1.8.1",
+    "react-responsive-carousel": "^3.2.9"
   },
   "scripts": {
     "start": "react-scripts start",
